# Digital-Logic-Simulator

./: .gitignore  CMakeLists.txt  README.md
include/: Application.hpp  constraints.hpp
include/components/: component.hpp  gate_and.hpp  gate_not.hpp  gate_or.hpp  input_switch.hpp  output_light.hpp
src/: Application.cpp  main.cpp
